--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </title>
 </head>
 <body>
-	<h1><b>Welcome to Image and Gif galore</b></h1>
+	<h1><b>Welcome to Image and Gif galore!</b></h1>
 	<h2><b>Click a picture to start</h2></b>
 <img src="Gifs/Cookie1.gif" />
 </body>
