--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 </title>
 </head>
 <body>
+<div id="text">
 	<h1><b>Welcome to Image and Gif galore!</b></h1>
 	<h2><b>Click a picture to start</h2></b>
-<img src="Gifs/Cookie1.gif" />
+</div>
+<a href="Food.html"><img src="Gifs/Cookie1.gif" /></a>
 </body>
 </html>
