--- a/Food.html
+++ b/Food.html
@@ -2,10 +2,13 @@
 <head>
 	<title>Food
 	</title>
+	<link rel="stylesheet" type="text/css" href="styleSheet1.css"
 </head>
 <body>
 	<a href="index.html">To homepage</a>
 	<br>
-	<img src="Gifs/Rolo.gif"/>
+	<div id="dessert">
+	<img class="image" src="Gifs/Rolo.gif"/>
+	</div>
 	</body>
 	</html>
