--- a/Food.html
+++ b/Food.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Food
 	</title>
-	<link rel="stylesheet" type="text/css" href="styleSheet1.css"
+	<link rel="stylesheet" type="text/css" href="styleSheet1.css">
 </head>
 <body>
 	<a href="index.html">To homepage</a>
