--- a/Food.html
+++ b/Food.html
@@ -10,7 +10,7 @@
 	<br>
 	<br>
 	<div id="dessert">
-	<img class="image" src="Gifs/Rolo.gif"/>
+	<img class="dessertImage" src="Gifs/Rolo.gif"/>
 	</div>
 	</body>
 	</html>
