Changed div name

--- a/Food.html
+++ b/Food.html
@@ -9,7 +9,7 @@
 	<br>
 	<br>
 	<br>
-	<div id="dessert">
+	<div id="dessertGifs">
 	<img class="dessertImage" src="Gifs/Rolo.gif"/>
 	</div>
 	</body>
