Changed the homepage
to selection of what website you want

--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <html>
 <head>
-<title>Image and Gif galore
-</title>
-<link rel="stylesheet" type="text/css" href="styleSheet1.css">
+	<title>The Master 2-0</title>
+	<link rel="stylesheet" type="text/css" href="styleSheet1.css" >
 </head>
 <body>
-<div id="text">
-	<h1><b>Welcome to Image and Gif galore!</b></h1>
-	<h2><b>Click a picture to start</h2></b>
-</div>
-<a href="Food.html"><img class="image" src="Gifs/Cookie1.gif" /></a>
+	<h1>Choose the website you want to visit</h1>
+	<a href="ImagesAndGifsGalore.html">Image and gif galore</a>
 </body>
 </html>
