--- a/Food.html
+++ b/Food.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="styleSheet1.css">
 </head>
 <body>
-	<a href="ImagesAndGifsGalore.html">To homepage</a>
+	<a href="index.html">To homepage</a>
 	<br>
 	<br>
 	<br>
