--- a/Food.html
+++ b/Food.html
@@ -5,12 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="styleSheet1.css">
 </head>
 <body>
-	<a href="index.html">To homepage</a>
+	<a href="#dessertGifs">Jump to gifs</a>
 	<br>
 	<br>
 	<br>
-	<div id="dessertGifs">
+	<a name="dessertGifs"> <div id="dessertGifs"></a>
 	<img class="dessertImage" src="Gifs/Rolo.gif"/>
 	</div>
+	<a href="index.html">To homepage</a>
 	</body>
 	</html>
