--- a/Food.html
+++ b/Food.html
@@ -6,11 +6,14 @@
 </head>
 <body>
 	<a href="#dessertGifs">Jump to gifs</a>
+	<a href="#dessertImages">Jump to images</a>
 	<br>
 	<br>
 	<br>
 	<a name="dessertGifs"> <div id="dessertGifs"></a>
 	<img class="dessertImage" src="Gifs/Rolo.gif"/>
+	</div>
+	<a name="dessertImages"><div></a>
 	</div>
 	<a href="index.html">To homepage</a>
 	</body>
