Added images and gifs

--- a/Food.html
+++ b/Food.html
@@ -12,8 +12,15 @@
 	<br>
 	<a name="dessertGifs"> <div id="dessertGifs"></a>
 	<img class="dessertImage" src="Gifs/Rolo.gif"/>
+	<img class="dessertImage" src="Gifs/IceCream1.gif"/>
+	<img class="dessertImage" src="Gifs/Donut.gif"/>
+	<img class="dessertImage" src="Gifs/Cupcake.gif"/>
+	<img class="dessertImage" src="Gifs/Cookie.gif"/>
 	</div>
 	<a name="dessertImages"><div></a>
+	<img class="dessertImage" src="Images/RainbowCake1.jpg"/>
+	<img class="dessertImage" src="Images/FruitCake1.jpg"/>
+	<img class="dessertImage" src="Images/CheeseCake1.jpg"/>
 	</div>
 	<a href="index.html">To homepage</a>
 	</body>
