--- a/Food.html
+++ b/Food.html
@@ -10,14 +10,16 @@
 	<br>
 	<br>
 	<br>
-	<a name="dessertGifs"> <div id="dessertGifs"></a>
+	<h1>Gifs</h1>
+	<a name="dessertGifs"><div id="dessertGifs"></a>
 	<img class="dessertImage" src="Gifs/Rolo.gif"/>
 	<img class="dessertImage" src="Gifs/IceCream1.gif"/>
 	<img class="dessertImage" src="Gifs/Donut.gif"/>
 	<img class="dessertImage" src="Gifs/Cupcake.gif"/>
 	<img class="dessertImage" src="Gifs/Cookie.gif"/>
 	</div>
-	<a name="dessertImages"><div></a>
+	<h1>Images</h1>
+	<a name="dessertImages"><div id="dessertImages" ></a>
 	<img class="dessertImage" src="Images/RainbowCake1.jpg"/>
 	<img class="dessertImage" src="Images/FruitCake1.jpg"/>
 	<img class="dessertImage" src="Images/CheeseCake1.jpg"/>
