--- a/Food.html
+++ b/Food.html
@@ -14,9 +14,9 @@
 	<a name="dessertGifs"><div id="dessertGifs"></a>
 	<img class="dessertImage" src="Gifs/Rolo.gif"/>
 	<img class="dessertImage" src="Gifs/IceCream1.gif"/>
-	<img class="dessertImage" src="Gifs/Donut.gif"/>
-	<img class="dessertImage" src="Gifs/Cupcake.gif"/>
-	<img class="dessertImage" src="Gifs/Cookie.gif"/>
+	<img class="dessertImage" src="Gifs/Donut1.gif"/>
+	<img class="dessertImage" src="Gifs/Cupcake1.gif"/>
+	<img class="dessertImage" src="Gifs/Cookie1.gif"/>
 	</div>
 	<h1>Images</h1>
 	<a name="dessertImages"><div id="dessertImages" ></a>
