changed href to make it quiker to load and make sure to use what i did in future href

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	<h1><b>Welcome to Image and Gif galore!</b></h1>
 	<h2><b>Click a picture to start</h2></b>
 </div>
-<a href="Food.html"><img class="image" src="Gifs/Cookie1.gif" /></a>
+<a href="Food.html"><img class="image" src="https://themaster2-0.io/Gifs/Cookie1.gif" /></a>
 </body>
 </html>
