--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Image and Gif galore
 </title>
-<link rel="icon" type="image/gif" href="https://themaster2-0.io/Gifs/Cookie1.gif">
+<link rel="icon" type="image/gif" href="https://themaster2-0.github.io/Gifs/Cookie1.gif">
 <link rel="stylesheet" type="text/css" href="styleSheet1.css">
 </head>
 <body>
@@ -10,6 +10,6 @@
 	<h1><b>Welcome to Image and Gif galore!</b></h1>
 	<h2><b>Click a picture to start</h2></b>
 </div>
-<a href="Food.html"><img class="image" src="https://themaster2-0.io/Gifs/Cookie1.gif" /></a>
+<a href="Food.html"><img class="image" src="https://themaster2-0.github.io/Gifs/Cookie1.gif" /></a>
 </body>
 </html>
