--- a/Food.html
+++ b/Food.html
@@ -12,17 +12,17 @@
 	<br>
 	<h1>Gifs</h1>
 	<a name="dessertGifs"><div id="dessertGifs"></a>
-	<img class="dessertImage" src="https://themaster2-0.io/Gifs/Rolo.gif"/>
-	<img class="dessertImage" src="https://themaster2-0.io/Gifs/IceCream1.gif"/>
-	<img class="dessertImage" src="https://themaster2-0.io/Gifs/Donut1.gif"/>
-	<img class="dessertImage" src="https://themaster2-0.io/Gifs/Cupcake1.gif"/>
-	<img class="dessertImage" src="https://themaster2-0.io/Gifs/Cookie1.gif"/>
+	<img class="dessertImage" src="https://themaster2-0.github.io/Gifs/Rolo.gif"/>
+	<img class="dessertImage" src="https://themaster2-0.github.io/Gifs/IceCream1.gif"/>
+	<img class="dessertImage" src="https://themaster2-0.github.io/Gifs/Donut1.gif"/>
+	<img class="dessertImage" src="https://themaster2-0.github.io/Gifs/Cupcake1.gif"/>
+	<img class="dessertImage" src="https://themaster2-0.github.io/Gifs/Cookie1.gif"/>
 	</div>
 	<h1>Images</h1>
 	<a name="dessertImages"><div id="dessertImages" ></a>
-	<img class="dessertImage" src="https://themaster2-0.io/Images/RainbowCake1.jpg"/>
-	<img class="dessertImage" src="https://themaster2-0.io/Images/FruitCake1.jpg"/>
-	<img class="dessertImage" src="https://themaster2-0.io/Images/CheeseCake1.jpg"/>
+	<img class="dessertImage" src="https://themaster2-0.github.io/Images/RainbowCake1.jpg"/>
+	<img class="dessertImage" src="https://themaster2-0.github.io/Images/FruitCake1.jpg"/>
+	<img class="dessertImage" src="https://themaster2-0.github.io/Images/CheeseCake1.jpg"/>
 	</div>
 	<a href="index.html">To homepage</a>
 	</body>
