--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<h1><b>Welcome to Image and Gif galore!</b></h1>
 	<h2><b>Click a picture to start</h2></b>
 </div>
+<div id="imageLinks">
 <a href="Food.html"><img class="image" src="https://themaster2-0.github.io/Gifs/Cookie1.gif" /></a>
+</div>
 </body>
 </html>
