--- a/Food.html
+++ b/Food.html
@@ -5,8 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="styleSheet1.css">
 </head>
 <body>
-	<a href="#dessertGifs">Jump to gifs</a>
-	<a href="#dessertImages">Jump to images</a>
+	<a href="index.html">To Homepage</a>
+	<a href="#dessertGifs">Jump to Gifs</a>
+	<a href="#dessertImages">Jump to Images</a>
 	<br>
 	<br>
 	<br>
@@ -18,12 +19,15 @@
 	<img class="dessertImage" src="Gifs/Cupcake1.gif"/>
 	<img class="dessertImage" src="Gifs/Cookie1.gif"/>
 	</div>
+	<a href="#dessertGifs">Jump to Gifs</a>
+	<a href="#dessertImages">Jump to Images</a>
 	<h1>Images</h1>
-	<a name="dessertImages"><div id="dessertImages" ></a>
+	<a name="dessertImages">
+	<div id="dessertImages" ></a>
 	<img class="dessertImage" src="Images/RainbowCake1.jpg"/>
 	<img class="dessertImage" src="Images/FruitCake1.jpg"/>
 	<img class="dessertImage" src="Images/CheeseCake1.jpg"/>
 	</div>
-	<a href="index.html">To homepage</a>
+	<a href="index.html">To Homepage</a>
 	</body>
 	</html>
