--- a/Food.html
+++ b/Food.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 	<a href="index.html">To Homepage</a>
+	<br>
 	<a href="#dessertGifs">Jump to Gifs</a>
+	<br>
 	<a href="#dessertImages">Jump to Images</a>
 	<br>
 	<br>
@@ -19,7 +21,10 @@
 	<img class="dessertImage" src="Gifs/Cupcake1.gif"/>
 	<img class="dessertImage" src="Gifs/Cookie1.gif"/>
 	</div>
+	<a href="index.html">To Homepage</a>
+	<br>
 	<a href="#dessertGifs">Jump to Gifs</a>
+	<br>
 	<a href="#dessertImages">Jump to Images</a>
 	<h1>Images</h1>
 	<a name="dessertImages">
@@ -28,6 +33,7 @@
 	<img class="dessertImage" src="Images/FruitCake1.jpg"/>
 	<img class="dessertImage" src="Images/CheeseCake1.jpg"/>
 	</div>
+	<br>
 	<a href="index.html">To Homepage</a>
 	</body>
 	</html>
