--- a/Food.html
+++ b/Food.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Food
 	</title>
-	<link rel="stylesheet" type="text/css" href="styleSheet1.css">
+	<link rel="stylesheet" type="text/css" href="styleSheet2.css">
 </head>
 <body>
 	<a href="index.html">To Homepage</a>
@@ -20,6 +20,8 @@
 	<img class="dessertImage" src="Gifs/Donut1.gif"/>
 	<img class="dessertImage" src="Gifs/Cupcake1.gif"/>
 	<img class="dessertImage" src="Gifs/Cookie1.gif"/>
+	<img class="dessertImage" src="Gifs/Burger1.gif"/>
+	<img class="dessertImage" src="Gifs/Donut2.gif"/>
 	</div>
 	<a href="index.html">To Homepage</a>
 	<br>
