--- a/Food.html
+++ b/Food.html
@@ -5,11 +5,11 @@
 	<link rel="stylesheet" type="text/css" href="styleSheet2.css">
 </head>
 <body>
-	<a href="index.html">To Homepage</a>
+	<a href="index.html"><h1>To Homepage</h1</a>
 	<br>
-	<a href="#dessertGifs">Jump to Gifs</a>
+	<a href="#dessertGifs"><h1>Jump to Gifs</h1></a>
 	<br>
-	<a href="#dessertImages">Jump to Images</a>
+	<a href="#dessertImages"><h1>Jump to Images</h1></a>
 	<br>
 	<br>
 	<br>
@@ -23,11 +23,11 @@
 	<img class="dessertImage" src="Gifs/Burger1.gif"/>
 	<img class="dessertImage" src="Gifs/Donut2.gif"/>
 	</div>
-	<a href="index.html">To Homepage</a>
+	<a href="index.html"><h1>To Homepage</h1></a>
 	<br>
-	<a href="#dessertGifs">Jump to Gifs</a>
+	<a href="#dessertGifs"><h1>Jump to Gifs</h1></a>
 	<br>
-	<a href="#dessertImages">Jump to Images</a>
+	<a href="#dessertImages"><h1>Jump to Images</h1></a>
 	<h1>Images</h1>
 	<a name="dessertImages">
 	<div id="dessertImages" ></a>
