--- a/Food.html
+++ b/Food.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="styleSheet2.css">
 </head>
 <body>
-	<a href="index.html"><h1>To Homepage</h1</a>
+	<a href="index.html"><h1>To Homepage</h1></a>
 	<br>
 	<a href="#dessertGifs"><h1>Jump to Gifs</h1></a>
 	<br>
