--- a/Food.html
+++ b/Food.html
@@ -36,6 +36,6 @@
 	<img class="dessertImage" src="Images/CheeseCake1.jpg"/>
 	</div>
 	<br>
-	<a href="index.html">To Homepage</a>
+	<a href="index.html"><h3>To Homepage</h3></a>
 	</body>
 	</html>
