--- a/Food.html
+++ b/Food.html
@@ -15,13 +15,13 @@
 	<br>
 	<h1>Gifs</h1>
 	<a name="dessertGifs"><div id="dessertGifs"></a>
-	<img class="dessertImage" src="Gifs/Rolo.gif"/>
-	<img class="dessertImage" src="Gifs/IceCream1.gif"/>
-	<img class="dessertImage" src="Gifs/Donut1.gif"/>
-	<img class="dessertImage" src="Gifs/Cupcake1.gif"/>
-	<img class="dessertImage" src="Gifs/Cookie1.gif"/>
-	<img class="dessertImage" src="Gifs/Burger1.gif"/>
-	<img class="dessertImage" src="Gifs/Donut2.gif"/>
+	<img class="dessertImage" src="Gifs/Food/Rolo.gif"/>
+	<img class="dessertImage" src="Gifs/Food/IceCream1.gif"/>
+	<img class="dessertImage" src="Gifs/Food/Donut1.gif"/>
+	<img class="dessertImage" src="Gifs/Food/Cupcake1.gif"/>
+	<img class="dessertImage" src="Gifs/Food/Cookie1.gif"/>
+	<img class="dessertImage" src="Gifs/Food/Burger1.gif"/>
+	<img class="dessertImage" src="Gifs/Food/Donut2.gif"/>
 	</div>
 	<a href="index.html"><h3>To Homepage</h3></a>
 	<br>
@@ -31,9 +31,9 @@
 	<h1>Images</h1>
 	<a name="dessertImages">
 	<div id="dessertImages" ></a>
-	<img class="dessertImage" src="Images/RainbowCake1.jpg"/>
-	<img class="dessertImage" src="Images/FruitCake1.jpg"/>
-	<img class="dessertImage" src="Images/CheeseCake1.jpg"/>
+	<img class="dessertImage" src="Images/Food/RainbowCake1.jpg"/>
+	<img class="dessertImage" src="Images/Food/FruitCake1.jpg"/>
+	<img class="dessertImage" src="Images/Food/CheeseCake1.jpg"/>
 	</div>
 	<br>
 	<a href="index.html"><h3>To Homepage</h3></a>
