--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Image and Gif galore
 </title>
-<link rel="icon" type="image/gif" href="https://themaster2-0.github.io/Gifs/Cookie1.gif">
+<link rel="icon" type="image/gif" href="https://themaster2-0.github.io/Gifs/Food/Cookie1.gif">
 <link rel="stylesheet" type="text/css" href="styleSheet1.css">
 </head>
 <body>
