--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<h2><b>Click a picture to start</h2></b>
 </div>
 <div id="imageLinks">
-<a href="Food.html"><img class="image" src="https://themaster2-0.github.io/Gifs/Cookie1.gif" /></a>
+<a href="Food.html"><img class="image" src="https://themaster2-0.github.io/Gifs/Food/Cookie1.gif" /></a>
 </div>
 </body>
 </html>
