--- a/Dogs.html
+++ b/Dogs.html
@@ -3,28 +3,29 @@
 <title>Dogs
 </title>
 <link rel="stylesheet" type="text/css" href="styleSheet3.css">
+<link rel="icon" type="image/jpg" href="Images/Dogs/DogIcon.jpg">
 </head>
 <body>
 <a href="index.html"><h3>To Homepage</h3></a>
 	<br>
-	<a href="#dessertGifs"><h3>Jump to Gifs</h3></a>
+	<a href="#dogGifs"><h3>Jump to Gifs</h3></a>
 	<br>
-	<a href="#dessertImages"><h3>Jump to Images</h3></a>
+	<a href="#dogImages"><h3>Jump to Images</h3></a>
 	<br>
 	<br>
 	<br>
 	<h1>Gifs</h1>
-	<a name="dessertGifs"><div id="dessertGifs"></a>
-	<img class="dessertImage" src="Gifs/Dogs/PoliceChase.png"/>
+	<a name="dogGifs"><div id="dessertGifs"></a>
+	<img class="dogImage" src="Gifs/Dogs/PoliceChase.png"/>
 	</div>
 	<a href="index.html"><h3>To Homepage</h3></a>
 	<br>
-	<a href="#dessertGifs"><h3>Jump to Gifs</h3></a>
+	<a href="#dogGifs"><h3>Jump to Gifs</h3></a>
 	<br>
-	<a href="#dessertImages"><h3>Jump to Images</h3></a>
+	<a href="#dogImages"><h3>Jump to Images</h3></a>
 	<h1>Images</h1>
-	<a name="dessertImages">
-	<div id="dessertImages" ></a>
+	<a name="dogImages">
+	<div id="dogImages" ></a>
 	</div>
 	<br>
 	<a href="index.html"><h3>To Homepage</h3></a>
