--- a/Food.html
+++ b/Food.html
@@ -7,9 +7,9 @@
 <body>
 	<a href="index.html"><h3>To Homepage</h3></a>
 	<br>
-	<a href="#dessertGifs"><h3>Jump to Gifs</h3></a>
+	<a href="#dessertGifs"><h3>Jump to dessert gifs</h3></a>
 	<br>
-	<a href="#dessertImages"><h3>Jump to Images</h3></a>
+	<a href="#dessertImages"><h3>Jump to dessert images</h3></a>
 	<br>
 	<br>
 	<br>
@@ -23,11 +23,13 @@
 	<img class="dessertImage" src="Gifs/Food/Burger1.gif"/>
 	<img class="dessertImage" src="Gifs/Food/Donut2.gif"/>
 	</div>
+	<a name="snackGifs"><div id="snackGifs"></a>
+	</div>
 	<a href="index.html"><h3>To Homepage</h3></a>
 	<br>
-	<a href="#dessertGifs"><h3>Jump to Gifs</h3></a>
+	<a href="#dessertGifs"><h3>Jump to dessert gifs</h3></a>
 	<br>
-	<a href="#dessertImages"><h3>Jump to Images</h3></a>
+	<a href="#dessertImages"><h3>Jump to dessert images</h3></a>
 	<h1>Images</h1>
 	<a name="dessertImages">
 	<div id="dessertImages" ></a>
