--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </div>
 <div id="imageLinks">
 <a href="Food.html"><img class="image" src="https://themaster2-0.github.io/Gifs/Food/Cookie1.gif" /></a>
+<a href="Dogs.html"><img class="image" src="Images/Dogs/DogIcon.jpg"/></a>
 </div>
 </body>
 </html>
