--- a/Food.html
+++ b/Food.html
@@ -3,6 +3,7 @@
 	<title>Food
 	</title>
 	<link rel="stylesheet" type="text/css" href="styleSheet2.css">
+	<link rel="icon" type="image/gif" href="Gifs/Food/Cookie1.gif">
 </head>
 <body>
 	<a href="index.html"><h3>To Homepage</h3></a>
