--- a/Dogs.html
+++ b/Dogs.html
@@ -16,7 +16,7 @@
 	<br>
 	<h1>Gifs</h1>
 	<a name="dogGifs"><div id="dessertGifs"></a>
-	<img class="dogImage" src="Gifs/Dogs/PoliceChase.jpg"/>
+	<img class="dogImage" src="Gifs/Dogs/PoliceChase.gif"/>
 	</div>
 	<a href="index.html"><h3>To Homepage</h3></a>
 	<br>
