--- a/Food.html
+++ b/Food.html
@@ -40,6 +40,9 @@
 	<img class="dessertImage" src="Images/Food/CheeseCake1.jpg"/>
 	</div>
 	<br>
+	<div id="treatImages">
+	<img class="treatImage" src="Images/Food/Sweet1.gif"/>
+	<img class="treatImage"	src="Images/Food/Oreo1.gif"/>
 	<a href="index.html"><h3>To Homepage</h3></a>
 	</body>
 	</html>
