--- a/Food.html
+++ b/Food.html
@@ -25,6 +25,10 @@
 	<img class="dessertImage" src="Gifs/Food/Burger1.gif"/>
 	<img class="dessertImage" src="Gifs/Food/Donut2.gif"/>
 	</div>
+	<div id="treatGifs">
+	<img class="treatGif" src="Gifs/Food/Sweet1.gif"/>
+	<img class="treatGif"	src="Gifs/Food/Oreo1.gif"/>
+	</div>
 	<a name="snackGifs"><div id="snackGifs"></a>
 	</div>
 	<a href="index.html"><h3>To Homepage</h3></a>
@@ -40,9 +44,6 @@
 	<img class="dessertImage" src="Images/Food/CheeseCake1.jpg"/>
 	</div>
 	<br>
-	<div id="treatGifs">
-	<img class="treatGif" src="Gifs/Food/Sweet1.gif"/>
-	<img class="treatGif"	src="Gifs/Food/Oreo1.gif"/>
 	<a href="index.html"><h3>To Homepage</h3></a>
 	</body>
 	</html>
