--- a/Food.html
+++ b/Food.html
@@ -13,9 +13,12 @@
 	<br>
 	<a href="#dessertImages"><h3>Jump to dessert images</h3></a>
 	<br>
+	<a href="#treatGifs"><h3>Jump to treat gifs</h3>
+	<br>
 	<br>
 	<br>
 	<h1>Gifs</h1>
+	<h2>Dessert Gifs</h2>
 	<a name="dessertGifs"><div id="dessertGifs"></a>
 	<img class="dessertImage" src="Gifs/Food/Rolo.gif"/>
 	<img class="dessertImage" src="Gifs/Food/IceCream1.gif"/>
@@ -25,17 +28,19 @@
 	<img class="dessertImage" src="Gifs/Food/Burger1.gif"/>
 	<img class="dessertImage" src="Gifs/Food/Donut2.gif"/>
 	</div>
-	<div id="treatGifs">
+	<h2>Treat Gifs</h2>
+	<a name="treatGifs"><div id="treatGifs"></a>
 	<img class="treatGif" src="Gifs/Food/Sweet1.gif"/>
 	<img class="treatGif"	src="Gifs/Food/Oreo1.gif"/>
 	</div>
-	<a name="snackGifs"><div id="snackGifs"></a>
-	</div>
+	<br>
 	<a href="index.html"><h3>To Homepage</h3></a>
 	<br>
 	<a href="#dessertGifs"><h3>Jump to dessert gifs</h3></a>
 	<br>
 	<a href="#dessertImages"><h3>Jump to dessert images</h3></a>
+	<br>
+	<a href="#treatGifs"><h3>Jump to treat gifs</h3></a>
 	<h1>Images</h1>
 	<a name="dessertImages">
 	<div id="dessertImages" ></a>
