--- a/Food.html
+++ b/Food.html
@@ -13,7 +13,7 @@
 	<br>
 	<a href="#dessertImages"><h3>Jump to dessert images</h3></a>
 	<br>
-	<a href="#treatGifs"><h3>Jump to treat gifs</h3>
+	<a href="#treatGifs"><h3>Jump to treat gifs</h3></a>
 	<br>
 	<br>
 	<br>
