--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Image and Gif galore
+<title>TheMaster2-0 Projects
 </title>
-<link rel="icon" type="image/gif" href="https://themaster2-0.github.io/Gifs/Food/Cookie1.gif">
-<link rel="stylesheet" type="text/css" href="styleSheet1.css">
 </head>
 <body>
-<div id="text">
-	<h1><b>Welcome to Image and Gif galore!</b></h1>
-	<h2><b>Click a picture to start</h2></b>
-</div>
-<div id="imageLinks">
-<a href="Food.html"><img class="image" src="https://themaster2-0.github.io/Gifs/Food/Cookie1.gif" /></a>
-<a href="Dogs.html"><img class="image" src="Images/Dogs/DogIcon.jpg"/></a>
-</div>
+	<h1>Welcome to the webpage of TheMaster2-0</h1>
+	<br>
+	<h2>Click a link to get started!!!</h2>
+ 	<br>		
 </body>
 </html>
