--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<h1>Welcome to the webpage of TheMaster2-0</h1>
 	<br>
 	<h2>Click a link to get started!!!</h2>
- 	<br>		
+ 	<br>
+ 	<div id="HomepageColumn1"><h3>Food</h3></div>
+ 	<div id="HomepageColumn2"><h3>Dogs</h3></div>
+ 	<div id="HomepageColumn3"><h3>Cricket</h3></div>		
 </body>
 </html>
