--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>TheMaster2-0 Projects
 </title>
+<link rel="stylesheet" type="text.css" href="Homepage.css">
 </head>
 <body>
 	<h1>Welcome to the webpage of TheMaster2-0</h1>
