--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 <title>TheMaster2-0 Projects
 </title>
-<link rel="stylesheet" type="text.css" href="Homepage.css">
+<link rel="stylesheet" type="text/css" href="Homepage.css">
 </head>
 <body>
 	<h1>Welcome to the webpage of TheMaster2-0</h1>
 	<br>
 	<h2>Click a link to get started!!!</h2>
  	<br>
- 	<div id="HomepageColumn1"><h3>Food</h3></div>
- 	<div id="HomepageColumn2"><h3>Dogs</h3></div>
- 	<div id="HomepageColumn3"><h3>Cricket</h3></div>		
+ 	<div class="HomepageColumn1"><h3>Food</h3></div>
+ 	<div class="HomepageColumn2"><h3>Dogs</h3></div>
+ 	<div class="HomepageColumn3"><h3>Cricket</h3></div>		
 </body>
 </html>
