--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 	<br>
 	<h2>Click a link to get started!!!</h2>
  	<br>
- 	<div class="HomepageColumn1"><h3>Food</h3></div>
- 	<div class="HomepageColumn2"><h3>Dogs</h3></div>
- 	<div class="HomepageColumn3"><h3>Cricket</h3></div>		
+ 	<div class="HomepageColumn1"><h3>Food</h3></div><div class="HomepageColumn2"><h3>Dogs</h3></div><div class="HomepageColumn3"><h3>Cricket</h3></div>		
 </body>
 </html>
