--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 	<br>
 	<h2>Click a link to get started!!!</h2>
  	<br>
- 	<div class="HomepageColumn1"><h3 style="display:inline">Food</h3></div><div class="HomepageColumn2"><h3 style="display:inline">Dogs</h3></div><div class="HomepageColumn3"><h3 style="display:inline">Cricket</h3></div>		
+ 	<div class="row">
+		<div class="column"><p>Food</p></div>
+		<div class="column"><p>Dogs</p></div>
+		<div class="column"><p>Cricket</p></div>
+</div>
 </body>
 </html>
