--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<h2>Click a link to get started!!!</h2>
  	<br>
  	<div class="row">
-		<div class="column"><p text-align="left">Food</p></div>
-		<div class="column"><p text-align="middle">Dogs</p></div>
-		<div class="column"><p text-align="right">Cricket</p></div>
+		<div class="left"><p>Food</p></div>
+		<div class="middle"><p>Dogs</p></div>
+		<div class="right"><p>Cricket</p></div>
 </div>
 </body>
 </html>
