--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 	<br>
 	<h2>Click a link to get started!!!</h2>
  	<br>
- 	<div class="row">
-		<div class="left"><p>Food</p></div>
-		<div class="middle"><p>Dogs</p></div>
-		<div class="right"><p>Cricket</p></div>
-</div>
+ 	<table>
+ 		<tr>
+ 			<td>Food</td>
+ 			<td>Dogs</td>
+ 			<td>Cricket</td>
+ 		</tr>
+ 	</table>
 </body>
 </html>
