--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<h2>Click a link to get started!!!</h2>
  	<br>
  	<table>
- 		<tr width="100%">
+ 		<tr style="width:100%">
  			<td>Food</td>
  			<td>Dogs</td>
  			<td>Cricket</td>
