--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 	<br>
 	<h2>Click a link to get started!!!</h2>
  	<br>
- 	<table>
- 		<tr>
- 			<td>Food</td>
- 			<td>Dogs</td>
- 			<td>Cricket</td>
- 			<td>Cats</td>
- 		</tr>
- 	</table>
+ 	<div id="Links">
+	Food
+	Coding
+	Cats
+	Dogs
+	Cricket
+	Toys
+	Gifs
+	Flowers
+	Sport
+	Books
+	Holiday Destinations   
 </body>
 </html>
