--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 	<h2>Click a link to get started!!!</h2>
  	<br>
  	<div id="Links">
-	Food
-	Coding
-	Cats
-	Dogs
-	Cricket
-	Toys
-	Gifs
-	Flowers
-	Sport
-	Books
-	Holiday Destinations   
+	<br>Food
+	<br>Coding
+	<br>Cats
+	<br>Dogs
+	<br>Cricket
+	<br>Toys
+	<br>Gifs
+	<br>Flowers
+	<br>iuhyjSport
+	<br>Books
+	<br>Holiday Destinations
+	</div>   
 </body>
 </html>
