--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet"> 
 <title>TheMaster2-0 Projects
 </title>
 <link rel="stylesheet" type="text/css" href="Homepage.css">
