--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="Homepage.css">
 </head>
 <body>
-	<h1>Welcome to the webpage of TheMaster2-0</h1>
+	<h1><div class="red">W</div><div class="orange">e</div><div class="yellow">l</div><div class="green">c</div><div class="blue">o</div><div class="purple">m</div><div class="pink">e</div> to the webpage of TheMaster2-0</h1>
 	<br>
 	<h2>Click a link to get started!!!</h2>
  	<br>
