--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="Homepage.css">
 </head>
 <body>
-	<h1><a><div class="red">W</div><div class="orange">e</div><div class="yellow">l</div><div class="green">c</div><div class="blue">o</div><div class="purple">m</div><div class="pink">e</div> to the webpage of TheMaster2-0</h1></a>
+	<h1 class="red">W</h1><h1 class="orange">e</h1><h1 class="yellow">l</h1><h1 class="green">c</h1><h1 class="blue">o</h1><h1 class="purple">m</h1><h1 class="pink">e</h1> to the webpage of TheMaster2-0</h1>
 	<br>
 	<h2>Click a link to get started!!!</h2>
  	<br>
@@ -23,6 +23,6 @@
 	<br>Sport
 	<br>Books
 	<br>Holiday Destinations
-	</div>   
+	</div>    
 </body>
 </html>
