--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<br>Coding
 	<br>Cats
 	<br>Dogs
-	<br><a href="https://pumas2222.github.io/Cricket.html">Cricket</a>
+	<br>Cricket
 	<br>Toys
 	<br>Gifs
 	<br>Flowers
