--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="Homepage.css">
 </head>
 <body>
-	<p><h1 style="display:inline" class="red">W</h1><h1 style="display:inline" class="orange">e</h1><h1 style="display:inline" class="yellow">l</h1><h1 style="display:inline" class="green">c</h1><h1 style="display:inline" class="blue">o</h1><h1 class="purple">m</h1><h1 style="display:inline" class="pink">e</h1> to the webpage of TheMaster2-0</h1></p>
+	<p><h1 style="display:inline" class="red">W</h1><h1 style="display:inline" class="orange">e</h1><h1 style="display:inline" class="yellow">l</h1><h1 style="display:inline" class="green">c</h1><h1 style="display:inline" class="blue">o</h1><h1 style="display:inline" class="purple">m</h1><h1 style="display:inline" class="pink">e</h1> to the webpage of TheMaster2-0</h1></p>
 	<br>
 	<h2>Click a link to get started!!!</h2>
  	<br>
