--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-Searching 2 files for "</h1>"
 
-C:\Users\carte\Documents\GitHub\TheMaster2-0.github.io\index.html:
-    8  </head>
-    9  <body>
-   10: 	<p><h1 style="display:inline" class="red">W</h1>
-   11: 		<h1 style="display:inline" class="orange">e</h1>
+
+<html>
+      <head>
+      	<title>TheMaster2-0
+      	</title>
+      </head>
+      <body>
+   	<p><h1 style="display:inline" class="red">W</h1>
+    		<h1 style="display:inline" class="orange">e</h1>
    <h1 style="display:inline" class="yellow">l</h1>
    <h1 style="display:inline" class="green">c</h1>
    <h1 style="display:inline" class="blue">o</h1>
@@ -36,7 +39,9 @@ C:\Users\carte\Documents\GitHub\TheMaster2-0.github.io\index.html:
        <h1 style="display:inline" class="green">2</h1>
        <h1 style="display:inline" class="blue">-</h1>
        	<h1 style="display:inline" class="purple">0</h1></p>
-   12  	<br>
-   13  	<h2>Click a link to get started!!!</h2>
+     	<br>
+     	<h2>Click a link to get started!!!</h2>
+     </body>
+     </html>
 
 
