--- a/index.html
+++ b/index.html
@@ -1,47 +1,28 @@
-
-
+-<!DOCTYPE html>
 <html>
-      <head>
-      	<title>TheMaster2-0
-      	</title>
-      </head>
-      <body>
-   	<p><h1 style="display:inline" class="red">W</h1>
-    		<h1 style="display:inline" class="orange">e</h1>
-   <h1 style="display:inline" class="yellow">l</h1>
-   <h1 style="display:inline" class="green">c</h1>
-   <h1 style="display:inline" class="blue">o</h1>
-   <h1 style="display:inline" class="purple">m</h1>
-   <h1 style="display:inline" class="pink">e </h1>
-   <h1 style="display:inline" class="red">t</h1>
-   <h1 style="display:inline" class="orange">o</h1>
-    <h1 style="display:inline" class="yellow">t</h1>
-    <h1 style="display:inline" class="green">h</h1>
-    <h1 style="display:inline" class="blue">e</h1>
-     <h1 style="display:inline" class="purple">w</h1>
-     <h1 style="display:inline" class="pink">e</h1>
-     <h1 style="display:inline" class="red">b</h1>
-     <h1 style="display:inline" class="orange">p</h1>
-     <h1 style="display:inline" class="yellow">a</h1>
-     <h1 style="display:inline" class="green">g</h1>
-     <h1 style="display:inline" class="blue">e</h1>
-      <h1 style="display:inline" class="purple">o</h1>
-      <h1 style="display:inline" class="pink">f</h1>
-       <h1 style="display:inline" class="red">T</h1>
-       <h1 style="display:inline" class="orange">h</h1>
-       <h1 style="display:inline" class="yellow">e</h1>
-       <h1 style="display:inline" class="green">M</h1>
-       <h1 style="display:inline" class="blue">a</h1>
-       <h1 style="display:inline" class="purple">s</h1>
-       <h1 style="display:inline" class="pink">t</h1>
-       <h1 style="display:inline" class="red">e</h1>
-       <h1 style="display:inline" class="orange">r</h1>
-       <h1 style="display:inline" class="green">2</h1>
-       <h1 style="display:inline" class="blue">-</h1>
-       	<h1 style="display:inline" class="purple">0</h1></p>
-     	<br>
-     	<h2>Click a link to get started!!!</h2>
-     </body>
-     </html>
-
-
+<head>
+	<link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet"> 
+<title>TheMaster2-0 Projects
+</title>
+<link rel="stylesheet" type="text/css" href="Homepage.css">
+</head>
+<body>
+	<p><h1 style="display:inline" class="red">W</h1><h1 style="display:inline" class="orange">e</h1><h1 style="display:inline" class="yellow">l</h1><h1 style="display:inline" class="green">c</h1><h1 style="display:inline" class="blue">o</h1><h1 style="display:inline" class="purple">m</h1><h1 style="display:inline" class="pink">e </h1><h1 style="display:inline" class="red">t<h1 style="display:inline" class="orange">o <h1 style="display:inline" class="yellow">t<h1 style="display:inline" class="green">h<h1 style="display:inline" class="blue">e <h1 style="display:inline" class="purple">w<h1 style="display:inline" class="pink">e<h1 style="display:inline" class="red">b<h1 style="display:inline" class="orange">p<h1 style="display:inline" class="yellow">a<h1 style="display:inline" class="green">g<h1 style="display:inline" class="blue">e <h1 style="display:inline" class="purple">o<h1 style="display:inline" class="pink">f <h1 style="display:inline" class="red">T<h1 style="display:inline" class="orange">h<h1 style="display:inline" class="yellow">e<h1 style="display:inline" class="green">M<h1 style="display:inline" class="blue">a<h1 style="display:inline" class="purple"><h1 style="display:inline" class="pink">s<h1 style="display:inline" class="red">t<h1 style="display:inline" class="orange">e<h1 style="display:inline" class="green">r<h1 style="display:inline" class="blue">2<h1 style="display:inline" class="purple">-<h1 style="display:inline" class="pink">0</h1></p>
+	<br>
+	<h2>Click a link to get started!!!</h2>
+ 	<br>
+ 	<div id="Links">
+	<br>Food
+	<br>Coding
+	<br>Cats
+	<br>Dogs
+	<br><a href="https://pumas2222.github.io/Cricket.html">Cricket</a>
+	<br>Toys
+	<br>Gifs
+	<br>Flowers
+	<br>Sport
+	<br>Books
+	<br>Holiday Destinations
+	</div>    
+</body>
+</html>
