--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  	<br>
  	<div id="Links">
 	<br>Food
-	<br>Coding
+	<br><a href="Coding/Coding.html">Coding</a>
 	<br>Cats
 	<br>Dogs
 	<br><a href="https://pumas2222.github.io/Cricket.html">Cricket</a>
