--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<br><a href="Coding/Coding.html">Coding</a>
 	<br>Cats
 	<br>Dogs
-	<br><a href="https://pumas2222.github.io/Cricket.html">Cricket</a>
+	<br><a href="Cricket/Cricket.html">Cricket</a>
 	<br>Toys
 	<br>Gifs
 	<br>Flowers
