--- a/Cricket/Cricket.html
+++ b/Cricket/Cricket.html
@@ -8,14 +8,8 @@
 <body>
 	<h1>A diagram showing how to bowl</h1>
 	<p>The following image is a diagram showing how to bowl.</p>
-	<img src="Images/Cricket/bowlingDiagram.jpg" alt="Cricket bowling diagram">
+	<img src="Images/bowlingDiagram.jpg" alt="Cricket bowling diagram">
 	<br>
-	<button onclick="goBack()">Go Back</button>
-
-	<script>
-	function goBack() {
-	    window.history.back();
-	}
-</script>
+	<a href="../index.html">Go Back</a>
 </body>
 </html>
