--- a/Coding/Coding.html
+++ b/Coding/Coding.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Coding</title>
 </head>
 <body>
-
+	<a href="../index.html">Go Back</a>
 </body>
 </html>
