--- a/Cricket/Cricket.html
+++ b/Cricket/Cricket.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Cricket</title>
-	<link rel="stylesheet" type="text/css" href="styleSheetCricket.css">
+	<link rel="stylesheet" type="text/css" href="Cricket.css">
 	<link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
 </head>
 <body>
