--- a/Coding/Coding.html
+++ b/Coding/Coding.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Coding</title>
+	<link rel="stylesheet" type="text/css" href="Coding.css">
 	<link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
 </head>
 <body>
