--- a/Coding/Coding.html
+++ b/Coding/Coding.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
 </head>
 <body>
+	<h1>Coding</h1>
 	<a href="../index.html">Go Back</a>
 </body>
 </html>
