--- a/Cricket/Cricket.html
+++ b/Cricket/Cricket.html
@@ -6,7 +6,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
 </head>
 <body>
-	<h1>A diagram showing how to bowl</h1>
+	<h1>Cricket</h1>
+	<h2>A diagram showing how to bowl</h1>
 	<p>The following image is a diagram showing how to bowl.</p>
 	<img src="Images/bowlingDiagram.jpg" alt="Cricket bowling diagram">
 	<br>
