--- a/Coding/HTML/HTML.html
+++ b/Coding/HTML/HTML.html
@@ -5,6 +5,6 @@
 	<link rel="stylesheet" type="text/css" href="HTML.css">
 </head>
 <body>
-
+	<a href="../../index.html">Go Back</a>
 </body>
 </html>
