--- a/Coding/CSS/CSS.html
+++ b/Coding/CSS/CSS.html
@@ -6,6 +6,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
 </head>
 <body>
-	<a href="../../index.html">Go Back</a>
+	<a href="../Coding.html">Go Back</a>
 </body>
 </html>
