--- a/Coding/Coding.html
+++ b/Coding/Coding.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<h1>Coding</h1>
+	<img src="../HomepageImages/html5-css3.png">
 	<a href="HTML/HTML.html"><h2>HTML</h2></a>
 	<a href="CSS/CSS.html"><h2>CSS</h2></a>
 	<a href="../index.html">Go Back</a>
