--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 	<br>Sport
 	<br>Books
 	<br>Holiday Destinations
+	<br>School
+	<br>Carter's Website
+	<br>Scott's Website
 	</div>
 	<h2>Check out our Youtube channel <a href="https://www.youtube.com/channel/UCkaIncOuUYhEHCjNvzW8iPQ">here</a>!</h2>
 </body>
