--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<br>Holiday Destinations
 	<br>School
 	<br>Carter's Website
-	<br>Scott's Website
+	<br><a href="https://pumas2222.github.io">Scott's Website</a>
 	</div>
 	<h2>Check out our Youtube channel <a href="https://www.youtube.com/channel/UCkaIncOuUYhEHCjNvzW8iPQ">here</a>!</h2>
 </body>
