--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<br>Books
 	<br>Holiday Destinations
 	<br>School
-	<br>Carter's Website
+	<br><a href="https://the-master27.github.io">Carter's Website</a>
 	<br><a href="https://pumas2222.github.io">Scott's Website</a>
 	</div>
 	<h2>Check out our Youtube channel <a href="https://www.youtube.com/channel/UCkaIncOuUYhEHCjNvzW8iPQ">here</a>!</h2>
