--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 	<br><a href="https://the-master27.github.io">Carter's Website</a>
 	<br><a href="https://pumas2222.github.io">Scott's Website</a>
 	</div>
-	<h2>Check out our Youtube channel <a href="https://www.youtube.com/channel/UCkaIncOuUYhEHCjNvzW8iPQ">here</a>!</h2>
+	<h2>Check out our crappy Youtube channel <a href="https://www.youtube.com/channel/UCkaIncOuUYhEHCjNvzW8iPQ">here</a>!</h2>
 </body>
 </html>
