--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
 <title>TheMaster2-0 Projects
 </title>
 <link rel="stylesheet" type="text/css" href="Homepage.css">
@@ -9,7 +9,7 @@
 <body>
 	<div class="white"><br><p><h1 style="display:inline" class="red">W</h1><h1 style="display:inline" class="orange">e</h1><h1 style="display:inline" class="yellow">l</h1><h1 style="display:inline" class="green">c</h1><h1 style="display:inline" class="blue">o</h1><h1 style="display:inline" class="purple">m</h1><h1 style="display:inline" class="pink">e </h1><h1 style="display:inline" class="red">t<h1 style="display:inline" class="orange">o <h1 style="display:inline" class="yellow">t<h1 style="display:inline" class="green">h<h1 style="display:inline" class="blue">e <h1 style="display:inline" class="purple">w<h1 style="display:inline" class="pink">e<h1 style="display:inline" class="red">b<h1 style="display:inline" class="orange">p<h1 style="display:inline" class="yellow">a<h1 style="display:inline" class="green">g<h1 style="display:inline" class="blue">e <h1 style="display:inline" class="purple">o<h1 style="display:inline" class="pink">f <h1 style="display:inline" class="red">T<h1 style="display:inline" class="orange">h<h1 style="display:inline" class="yellow">e<h1 style="display:inline" class="green">M<h1 style="display:inline" class="blue">a<h1 style="display:inline" class="purple"><h1 style="display:inline" class="pink">s<h1 style="display:inline" class="red">t<h1 style="display:inline" class="orange">e<h1 style="display:inline" class="green">r<h1 style="display:inline" class="blue">2<h1 style="display:inline" class="purple">-<h1 style="display:inline" class="pink">0</h1></p><br></div>
 	<br>
-	<h2>Click a link to get started!!!</h2>	
+	<h2>Click a link to get started!!!</h2>
 		<img align="left" src="HomepageImages/Cake.png" width="500px" height="500px">
 		<img align="right" src="HomepageImages/html5-css3.png" width="500px" height="500px">
  	<br>
@@ -28,6 +28,7 @@
 	<br>School
 	<br><a href="https://the-master27.github.io">Carter's Website</a>
 	<br><a href="https://pumas2222.github.io">Scott's Website</a>
+	<br><a href="https://TheMaster2-0.github.io/ourWesiteThingy">Our other website</a>
 	</div>
 	<h2>Check out our Youtube channel <a href="https://www.youtube.com/channel/UCkaIncOuUYhEHCjNvzW8iPQ">here</a>!</h2>
 </body>
