--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<br>School
 	<br><a href="https://the-master27.github.io">Carter's Website</a>
 	<br><a href="https://pumas2222.github.io">Scott's Website</a>
-	<br><a href="https://TheMaster2-0.github.io/ourWesiteThingy">Our other website</a>
+	<br><a href="https://TheMaster2-0.github.io/ourWebsiteThingy">Our other website</a>
 	</div>
 	<h2>Check out our Youtube channel <a href="https://www.youtube.com/channel/UCkaIncOuUYhEHCjNvzW8iPQ">here</a>!</h2>
 </body>
